Bug fetch airtable data see src/screens/Plan

--- a/.babelrc
+++ b/.babelrc
@@ -12,7 +12,7 @@
                     "@constants": "./src/constants",
                     "@containers": "./src/containers",
                     "@contexts": "./src/contexts",
-                    "@helpers": "./src/helpersc",
+                    "@helpers": "./src/helpers",
                     "@hooks": "./src/hooks",
                     "@screens": "./src/screens"
                 }
