--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "homepage": "https://github.com/cyril94440/AntiCovid#readme",
     "devDependencies": {
+        "@babel/plugin-proposal-decorators": "^7.8.3",
         "babel-plugin-module-resolver": "^4.0.0",
         "babel-plugin-styled-components": "^1.10.7",
         "next-compose-plugins": "^2.2.0"
@@ -31,6 +32,9 @@
         "babel-plugin-import": "^1.13.0",
         "less": "^3.11.1",
         "less-vars-to-js": "^1.3.0",
+        "mobx": "^5.15.4",
+        "mobx-react": "^6.1.8",
+        "mobx-react-lite": "^1.5.2",
         "next": "^9.3.0",
         "nprogress": "^0.2.0",
         "null-loader": "^3.0.0",
