--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "mobx": "^5.15.4",
         "mobx-react": "^6.1.8",
         "mobx-react-lite": "^1.5.2",
+        "mobx-utils": "^5.5.5",
         "next": "^9.3.0",
         "nprogress": "^0.2.0",
         "null-loader": "^3.0.0",
