--- a/.babelrc
+++ b/.babelrc
@@ -15,6 +15,7 @@
                     "@contexts": "./src/contexts",
                     "@helpers": "./src/helpers",
                     "@hooks": "./src/hooks",
+                    "@models": "./src/models",
                     "@screens": "./src/screens"
                 }
             }
