--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
         "airtable": "^0.8.1",
         "antd": "^4.0.3",
         "babel-plugin-import": "^1.13.0",
+        "disqus-react": "^1.0.7",
         "less": "^3.11.1",
         "less-vars-to-js": "^1.3.0",
         "mobx": "^5.15.4",
