--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
         "antd": "^4.0.3",
         "babel-plugin-import": "^1.13.0",
         "disqus-react": "^1.0.7",
+        "formidable": "^1.2.2",
         "less": "^3.11.1",
         "less-vars-to-js": "^1.3.0",
         "mobx": "^5.15.4",
