--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
         "null-loader": "^3.0.0",
         "react": "^16.13.0",
         "react-dom": "^16.13.0",
+        "react-markdown": "^4.3.1",
         "react-socks": "^2.1.0",
         "styled-components": "^5.0.1"
     }
