--- a/.babelrc
+++ b/.babelrc
@@ -3,7 +3,7 @@
 	"plugins": [
 		["@babel/plugin-proposal-decorators", { "legacy": true }],
 		["styled-components", { "ssr": true }],
-		["import", { "libraryName": "antd", "style": true }],
+		["import", { "libraryName": "antd", "style": "css" }],
 		[
 			"module-resolver",
 			{
@@ -13,7 +13,6 @@
 					"@constants": "./src/constants",
 					"@containers": "./src/containers",
 					"@helpers": "./src/helpers",
-					"@hooks": "./src/hooks",
 					"@screens": "./src/screens",
 					"@stores": "./src/stores"
 				}
