--- a/package.json
+++ b/package.json
@@ -26,14 +26,12 @@
         "next-compose-plugins": "^2.2.0"
     },
     "dependencies": {
-        "@zeit/next-less": "^1.0.1",
+        "@zeit/next-css": "^1.0.1",
         "airtable": "^0.8.1",
         "antd": "^4.1.0",
         "babel-plugin-import": "^1.13.0",
         "disqus-react": "^1.0.8",
         "formidable": "^1.2.2",
-        "less": "^3.11.1",
-        "less-vars-to-js": "^1.3.0",
         "mobx": "^5.15.4",
         "mobx-react": "^6.1.8",
         "mobx-react-lite": "^1.5.2",
